--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asttokens==2.4.1
 bleach==6.1.0
+blinker==1.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
 comm==0.2.1
 contourpy==1.2.0
@@ -9,19 +11,28 @@ cycler==0.12.1
 debugpy==1.8.1
 decorator==5.1.1
 executing==2.0.1
+filelock==3.13.4
+Flask==3.0.3
 fonttools==4.49.0
+fsspec==2024.3.1
+huggingface-hub==0.22.2
 idna==3.6
 ipykernel==6.29.3
 ipython==8.22.2
+itsdangerous==2.1.2
 jedi==0.19.1
+Jinja2==3.1.3
 joblib==1.3.2
 jupyter_client==8.6.0
 jupyter_core==5.7.1
 kaggle==1.6.6
 kiwisolver==1.4.5
+MarkupSafe==2.1.5
 matplotlib==3.8.3
 matplotlib-inline==0.1.6
+mpmath==1.3.0
 nest-asyncio==1.6.0
+networkx==3.3
 numpy==1.26.4
 packaging==24.0
 pandas==2.2.0
@@ -38,19 +49,30 @@ python-dotenv==1.0.1
 python-slugify==8.0.4
 pytz==2024.1
 pywin32==306
+PyYAML==6.0.1
 pyzmq==25.1.2
+regex==2023.12.25
 requests==2.31.0
+safetensors==0.4.2
 scikit-learn==1.4.1.post1
 scipy==1.12.0
 seaborn==0.13.2
 six==1.16.0
 stack-data==0.6.3
+sympy==1.12
 text-unidecode==1.3
 threadpoolctl==3.3.0
+tokenizers==0.15.2
+torch==2.2.2+cu121
+torchaudio==2.2.2+cu121
+torchvision==0.17.2+cu121
 tornado==6.4
 tqdm==4.66.2
 traitlets==5.14.1
+transformers==4.39.3
+typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
 wcwidth==0.2.13
 webencodings==0.5.1
+Werkzeug==3.0.2
